3999.	[func]		"mkeys" and "nzf" files are now named after
			their corresponding views, unless the view name
			contains characters that would be incompatible
			with use in a filename (i.e., slash, backslash,
			or capital letters). If a view name does contain
			these characters, the files will still be named
			using a cryptographic hash of the view name.
			Regardless of this, if a file using the old name
			format is found to exist, it will continue to be
			used. [RT #37704]

3998.	[bug]		isc_radix_search was returning matches that were
			too precise. [RT #37680]

3997.	[protocol]	Add OPENGPGKEY record. [RT# 37671]

3996.	[bug]		Address use after free on out of memory error in
			keyring_add. [RT #37639]

3995.	[bug]		receive_secure_serial holds the zone lock for too
			long. [RT #37626]

3994.	[func]		Dig now supports setting the last unassigned DNS
			header flag bit (dig +zflag). [RT #37421]

3993.	[func]		Dig now supports EDNS negotiation by default.
			(dig +[no]ednsnegotiation). [RT #37604]

3992.	[func]		DiG can now send queries without questions
			(dig +header-only). [RT #37599]

3991.	[func]		Add the ability to buffer logging output by specifying
			"buffered yes;" when defining a channel. [RT #26561]

3990.	[testing]	Add tests for unknown DNSSEC algorithm handling.
			[RT #37541]

3989.	[cleanup]	Remove redundent dns_db_resigned calls. [RT #35748]

3988.	[func]		Allow the zone serial of a dynamically updatable
			zone to be updated via "rndc signing -serial".
			[RT #37404]

3987.	[func]		Handle future Visual Studio 14 incompatible changes.
			[RT #37380]

3986.	[doc]		Add the BIND version number to page footers
			in the ARM. [RT #37398]

3985.	[doc]		Describe how +ndots and +search interact in dig.
			[RT #37529]

3984.	[func]		Accept 256 byte long PINs in native PKCS#11
			crypto. [RT #37410]

3983.	[bug]		Change #3940 was incomplete: negative trust anchors
			could be set to last up to a week, but the